--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                         <div class="overlay-box">
                             <img class="portfolio-img" src="./images/bankingapp.jpg" alt="App" width="360" height="300">
                             <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
-                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                            </p>
                         </div>
                         <div class="iner-two">
                             <h3 class="portfolio-title">Banking App</h3>
