--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <li class="portfolio-item">
                         <div class="overlay-box">
                             <img class="portfolio-img" src="./images/bankingapp.jpg" alt="App" width="360" height="300">
-                            <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                            <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                             </p>
                         </div>
@@ -288,7 +288,7 @@
                         <div class="overlay-box">
                             <img class="portfolio-img" src="./images/cashlesspayment.jpg" alt="Marketing" width="360"
                                 height="300">
-                                <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                     · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="iner-two">
@@ -300,7 +300,7 @@
                         <div class="overlay-box">
                             <img class="portfolio-img" src="./images/meditationapp.jpg" alt="App" width="360"
                                 height="300">
-                                <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                 · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="iner-two">
@@ -312,7 +312,7 @@
                         <div class="overlay-box">                        
                             <img class="portfolio-img" src="./images/taxiservice.jpg" alt="Marketing" width="360"
                                 height="300">
-                                <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                     · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="iner-two">
@@ -324,7 +324,7 @@
                         <div class="overlay-box">                         
                             <img class="portfolio-img" src="./images/screenillustrations.jpg" alt="Design" width="360"
                                 height="300">
-                                <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                     · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="iner-two">
@@ -336,7 +336,7 @@
                         <div class="overlay-box">                
                             <img class="portfolio-img" src="./images/onlinecourses.jpg" alt="Marketing" width="360"
                                 height="300">
-                                <p class="=overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App
                                     · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="iner-two">
@@ -360,8 +360,8 @@
             <div class="footer-socials">
                 <p class="footer-socials-title">Social media</p>
                 <ul class="footer-socials-list">
-                    <li class="footer-socials-item">
-                        <a class="footer-socials-link" href="" target="_blank" rel="noopener noreferrer">
+                    <li class="socials-item">
+                        <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
                             <svg class="social-icon" width="16" height="16">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
