--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                 </ul>
             </div>
         </section>
+
         <!-- section Our Team -->
 
         <section class="team">
@@ -266,6 +267,7 @@
                 </ul>
             </div>
         </section>
+
         <!-- section Our Portfolio-->
 
         <section class="portfolio">
@@ -348,7 +350,8 @@
             </div>
         </section>
     </main>
-    <!-- FOOTER -->
+
+    <!-- FOOTER -->24
     <footer class="footer">
         <div class="container container-footer">
             <div class="box-logo-footer">
@@ -362,28 +365,28 @@
                 <ul class="footer-socials-list">
                     <li class="socials-item">
                         <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                            <svg class="social-icon" width="16" height="16">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials-item">
                         <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                            <svg class="social-icon" width="16" height="16">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials-item">
                         <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                            <svg class="social-icon" width="16" height="16">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="socials-item">
                         <a class="socials-link" href="" target="_blank" rel="noopener noreferrer">
-                            <svg class="social-icon" width="16" height="16">
+                            <svg class="social-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
