--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </section>
     </main>
 
-    <!-- FOOTER -->24
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="container container-footer">
             <div class="box-logo-footer">
